--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "gatsby": "^5.13.3",
     "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "lucide-react": "^0.336.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.71.1"
