--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
   "rules": {
     "no-unused-variable": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "src/components/ThemeToggle/theme-toggle.js"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
